--- a/css/manifest.css
+++ b/css/manifest.css
@@ -361,3 +361,17 @@ CLASS: Utility
 TITLE: Personal Profile Colours
 ===========================================================================
 */
+/*
+===========================================================================
+                                  KENNY LU
+---------------------------------------------------------------------------
+PROJECT: 151102
+CLIENT: N/A
+DELIVERABLE: PHP - JS codebase for Personal Profile 1.0
+CLASS: Template
+TITLE: Main css for program
+===========================================================================
+*/
+.test {
+  left: 100px;
+  top: 100px; }
